<resources>
    <string name="app_name">Semilla</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Bienvenido a Semilla!</string>
    <string name="message_welcome">De acuerdo a la estación del año y a la zona en la que te encuentras, te recomendamos la siguiente huerta para comenzar.</string>
    <string name="edit_question">¿Deseas editarla ahora?</string>
    <string name="no">NO</string>
    <string name="yes">SI</string>
    <string name="edit">MODIFICAR HUERTA</string>
    <string name="mts">%d mts</string>
    <string name="my_ochard">Mi huerta</string>
    <string name="community">Comunidad</string>
    <string name="data">Datos útiles</string>
    <string name="ground">Agregar ubicación del terreno</string>
    <string name="ground_description">Esto servirá para saber con exactitud donde se encuentra ubicada tu huerta y así poder recomedarte el cultivo de acuerdo al tipo de suelo, clima, estación del año, etc.</string>
    <string name="cancel">CANCELAR</string>
    <string name="next">SIGUIENTE</string>
    <string name="ground_size_title">Medida de la huerta</string>
    <string name="ground_size_message">Así podrás saber la cantidad de plantas que podrás sembrar.</string>
    <string name="mts_width">Ancho en mts.</string>
    <string name="mts_height">Alto en mts.</string>
    <string name="vegetable_size_title">Selecciona las plantas</string>
    <string name="vegetable_size_message">Así podrás saber la cantidad de plantas que podrás sembrar.</string>
    <string name="vegetable_size_description">Recomendadas para tu ubicacion y epoca del año.</string>
    <string name="seed">SEMILLA</string>
    <string name="sow">SIEMBRA</string>
    <string name="evolution">EVOLUCION</string>
    <string name="seed_description">Para un area de 2mt x 2mt necesitara 50 gramos de semilla y obtendra 8 plantines</string>
    <string name="seed_message">Las semillas se pueden obtener de la siguiente manera.</string>
    <string name="seed_1">Compra de Semillas en vivero </string>
    <string name="seed_2">Compra de Plantines Comprando</string>
    <string name="seed_3">Comprando Tomates </string>
    <string name="seed_4">Organizaciones que ofrecen semillas gratis</string>
    <string name="seed_lowercase">Semilla</string>
    <string name="how_sod">Cómo sembrar</string>
    <string name="how_item_description">Lorem ipsum dolo sit a met</string>
    <string name="how_item_1">En tierra</string>
    <string name="how_item_2">En maceta</string>
    <string name="how_item_3">Cantidad de agua</string>
    <string name="how_item_4">Horas de sol</string>
    <string name="how_item_5">Temperaturas</string>
    <string name="how_item_6">Fecha de simbra y cosecha</string>
    <string name="how_item_7">Distancias entre plantines</string>
    <string name="sun">8 hs diarias.</string>
    <string name="how_evolution">Evolución</string>
    <string name="how_evolution_description">Si ya sembraste tus tomates, toca aquí</string>
    <string name="day_0">00 Días</string>
    <string name="day_1">30 Días</string>
    <string name="day_2">90 Días</string>
    <string name="day_3">180 Días</string>
    <string name="day_4">180 Días</string>
    <string name="day_5">240 Días</string>
    <string name="basic_ochard">Huerta básica</string>
    <string name="comparte">Comparte</string>
    <string name="food">Alimento</string>
    <string name="production">Producción</string>
    <string name="calendar">Calendario</string>
    <string name="a_n_no_cree_mi_huerta">Aún no cree Mi Huerta</string>
    <string name="ingresar_como_invitado">Ingresar como invitado</string>
    <string name="ya_tengo_mi_huerta">Ya tengo Mi Huerta</string>
    <string name="ingresar_como_usuario">Ingresar como usuario</string>
    <string name="c_mo_empiezo">Cómo empiezo?</string>
    <string name="login">Ingresar</string>
    <string name="recetas">Recetas</string>
    <string name="tutoriales">Tutoriales</string>
    <string name="qu_sembrar">Qué sembrar</string>
    <string name="work_plan">Plan de trabajo</string>
</resources>
