<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <View
            android:layout_width="32dp"
            android:layout_height="3dp"
            android:background="@color/verdigris"
            android:layout_marginRight="4dp"/>

        <View
            android:layout_width="32dp"
            android:layout_height="3dp"
            android:layout_marginRight="4dp"
            android:background="@color/timerwolf"/>

        <View
            android:layout_width="32dp"
            android:layout_height="3dp"
            android:background="@color/timerwolf"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/ground"
        android:textColor="@color/outer_space"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/tv_message_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/ground_description"
        android:textColor="@color/outer_space"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cancel"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/outer_space"
            android:textSize="14sp" />
        
        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:background="@color/outer_space" />


        <TextView
            android:id="@+id/tv_next"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/next"
            android:textColor="@color/outer_space"
            android:textSize="14sp"/>


    </LinearLayout>


</RelativeLayout>