<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="67dp"

    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_seed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/how_sod"
        android:textColor="@color/outer_space"
        android:textSize="21sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:background="@drawable/en_tierra" />

        <TextView
            android:id="@+id/sod_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_toRightOf="@+id/iv_item_1"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_1"
            android:textColor="@color/verdigris"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_item_description_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sod_item_1"
            android:layout_toRightOf="@+id/iv_item_1"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_description"
            android:textColor="@color/outer_space"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_item_description_1"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="21dp"
        android:background="@color/manatee" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:background="@drawable/en_maceta" />

        <TextView
            android:id="@+id/sod_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_toRightOf="@+id/iv_item_2"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_2"
            android:textColor="@color/verdigris"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_item_description_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sod_item_2"
            android:layout_toRightOf="@+id/iv_item_2"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_description"
            android:textColor="@color/outer_space"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_item_description_2"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="21dp"
        android:background="@color/manatee" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:background="@drawable/agua" />

        <TextView
            android:id="@+id/sod_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_toRightOf="@+id/iv_item_3"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_3"
            android:textColor="@color/verdigris"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_item_description_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sod_item_3"
            android:layout_toRightOf="@+id/iv_item_3"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_description"
            android:textColor="@color/outer_space"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_item_description_3"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="21dp"
        android:background="@color/manatee" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:background="@drawable/sol" />

        <TextView
            android:id="@+id/sod_item_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_toRightOf="@+id/iv_item_4"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_4"
            android:textColor="@color/verdigris"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sod_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:layout_below="@+id/sod_item_4"
            android:layout_alignLeft="@+id/sod_item_4"
            android:fontFamily="sans-serif"
            android:text="@string/sun"
            android:textColor="@color/taupe_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_item_description_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sod_sun"
            android:layout_toRightOf="@+id/iv_item_4"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_description"
            android:textColor="@color/outer_space"
            android:textSize="14sp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_item_description_4"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="21dp"
        android:background="@color/manatee" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:background="@drawable/temperatura" />

        <TextView
            android:id="@+id/sod_item_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_toRightOf="@+id/iv_item_5"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_5"
            android:textColor="@color/verdigris"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_item_description_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sod_item_5"
            android:layout_toRightOf="@+id/iv_item_5"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_description"
            android:textColor="@color/outer_space"
            android:textSize="14sp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_item_description_5"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="21dp"
        android:background="@color/manatee" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:background="@drawable/fecha" />


        <TextView
            android:id="@+id/sod_item_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_toRightOf="@+id/iv_item_6"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_6"
            android:textColor="@color/verdigris"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_item_description_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sod_item_6"
            android:layout_toRightOf="@+id/iv_item_6"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_description"
            android:textColor="@color/outer_space"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_item_description_6"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="21dp"
        android:background="@color/manatee" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:background="@drawable/distancia" />


        <TextView
            android:id="@+id/sod_item_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_toRightOf="@+id/iv_item_7"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_7"
            android:textColor="@color/verdigris"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_item_description_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sod_item_7"
            android:layout_toRightOf="@+id/iv_item_7"
            android:fontFamily="sans-serif"
            android:text="@string/how_item_description"
            android:textColor="@color/outer_space"
            android:textSize="14sp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_item_description_7"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="21dp"
        android:background="@color/manatee" />


</LinearLayout>